2011-10-09  Araki Ken  <arakiken@users.sf.net>

	* x_window.h, x_window_win32.c:
	  - x_window_t::wall_picture_is_set is removed in win32.
	  - x_window_has_wall_picture() macro is added.

2011-10-08  Araki Ken  <arakiken@users.sf.net>

	* x_window_win32.c:
	  - x_window_{un}set_wall_picture() functions reflect screen immediately.
	  - Background image is redrawn in margin area.

	* x_window_cairo.c, x_window_xft.c, x_window.c, x_window_win32.c:
	  Spaces at the end of lines are ignored by x_window_draw_string() and
	  x_window_{cairo|xft}_draw_string8().

	* x_window_cairo.c: cairo_move_to()/cairo_show_text() is replaced by
	  cairo_scaled_font_text_to_glyphs()/cairo_show_glyphs().

	* ml_vt100_parser.c: IGNORE_SPACE_FG_COLOR macro is removed.

2011-10-05  Araki Ken  <arakiken@users.sf.net>

	* x_font_ft.c: CAIRO_HINT_STYLE_NONE is applied in cairo_font_open().

	* x_window.c: GraphicsExpose event is processed instead of
	  VisibilityNotify event to improve performance.

2011-10-03  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c: A result of ibus_input_context_is_enabled() is cached in
	  im_ibus_t.

	* x_window_cairo.c: 0x80 - 0xff characters are converted to UTF-8 in
	  x_window_cairo_draw_string8().

2011-10-02  Araki Ken  <arakiken@users.sf.net>

	* x_font_ft.c: CAIRO_HINT_METRICS_OFF is not applied in cairo_font_open().
	
	* gtk/vte.c: If font size is changed, gtk_widget_queue_resize_no_redraw()
	  is called in vte_terminal_set_font_from_string().

2011-09-29  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, README.indic, ReleaseNote: Updated.

	* x_screen.c: -V option is no longer automatically turned on to show
	  indic characters.

	* x_font_fc.c, x_font.c: If minus value is returned as text width,
	  xxx_calculate_char_width() returns 0 instead.

	* ml_line_iscii.c: A line who contains indic characters is forced to
	  be redrawn to EOL in ml_line_iscii_render().

	* ml_line.c: If end_char_index argument of ml_line_set_modified() is larger